--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ body {
 }
 
 /* Perfil - nome e descrição */
+.nome {
+  width: 100%;
+  text-align: center;
+}
+
 #sobre {
   background-color: #fff;
   width: 65%;
@@ -59,7 +64,7 @@ body {
 }
 
 #habilities {
-  margin-left: 10%;
+  margin-left: 30%;
 }
 
 #perfil {
@@ -75,14 +80,14 @@ body {
   text-transform: uppercase;
 }
 .descricao {
-  /* width: 50%; */
-  margin-left: 42%;
-  font-size: 22px;
+  margin-left: 50%;
+  font-size: 1.2rem;
   text-align: center;
+  margin-right: 5%;
 }
 
 #foto {
-  width: 450px;
+  width: 70%;
   padding: 15px;
   background-color: #b2ddb0;
 }
